--- a/assets/scss/_predefined.scss
+++ b/assets/scss/_predefined.scss
@@ -1,7 +1,9 @@
 // Colors
 //
 $theme: #018574;
-$text: #e8eef2;
+// $text: #e8eef2;
+// $text: #8300e4;
+$text: #333333;
 $light-grey: #494f5c;
 $dark-grey: #3B3E48;
 $highlight-grey: #7d828a;
@@ -9,7 +11,8 @@ $midnightblue: #2c3e50;
 
 // Fonts
 //
-$fonts:  "Courier New";
+$fonts: 'Staatliches', sans-serif;
+// $fonts:  "Courier New";
 // $fonts: "Trebuchet MS", Verdana, "Verdana Ref", "Segoe UI", Candara, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 $code-fonts: Consolas, "Andale Mono WT", "Andale Mono", Menlo, Monaco, "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, "YaHei Consolas Hybrid", monospace, "Segoe UI Emoji", "PingFang SC", "Microsoft YaHei";
 
