Adds colored background.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,6 +7,7 @@
 		{{- end -}}
 	{{- end -}}
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="http://code.jquery.com/color/jquery.color-2.1.2.min.js"></script>
 {{ end }}
 
 {{ define "main" }}
