--- a/assets/scss/_predefined.scss
+++ b/assets/scss/_predefined.scss
@@ -3,17 +3,36 @@
 $theme: #018574;
 // $text: #e8eef2;
 // $text: #8300e4;
-$text: #555555;
-$light-grey: #494f5c;
+$text: #393939;
+// $light-grey: #494f5c;
+// $light-grey: transparent linear-gradient(90deg, #FFFFFF 0%, #D5D5D5 100%) 0% 0% no-repeat padding-box;
 $dark-grey: #3B3E48;
 $highlight-grey: #7d828a;
 $midnightblue: #2c3e50;
 
-// Fonts
-//
-$fonts: 'Staatliches', sans-serif;
-// $fonts:  "Courier New";
-// $fonts: "Trebuchet MS", Verdana, "Verdana Ref", "Segoe UI", Candara, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+@font-face {
+  font-family: SuisseIntl-Regular;
+  src: url("../fonts/SuisseIntl-Regular.otf") format("opentype");
+}
+
+@font-face {
+  font-family: SuisseIntl-Light;
+  src: url("../fonts/SuisseIntl-Light.otf") format("opentype");
+}
+
+// @font-face {
+//   font-family: GraublauWeb;
+//   font-weight: bold;
+//   src: url("../fonst/GraublauWebBold.otf") format("opentype");
+// }
+
+$fonts: 'SuisseIntl-Regular';
+
+// // Fonts
+// //
+// $fonts: 'Staatliches', sans-serif;
+// // $fonts:  "Courier New";
+// // $fonts: "Trebuchet MS", Verdana, "Verdana Ref", "Segoe UI", Candara, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 $code-fonts: Consolas, "Andale Mono WT", "Andale Mono", Menlo, Monaco, "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, "YaHei Consolas Hybrid", monospace, "Segoe UI Emoji", "PingFang SC", "Microsoft YaHei";
 
 // Mixins
