--- a/layouts/partials/newsletter.html
+++ b/layouts/partials/newsletter.html
@@ -2,7 +2,7 @@
     <form action="https://dance.us1.list-manage.com/subscribe/post?u=3d44ed8a86b03d067e0700c03&amp;id=cb1eca5359" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
             <div class="mc-field-group text-tiny">
-                <input type="email" value="" placeholder="Get a notification for offline events" name="EMAIL" class="required email text-big" id="mce-EMAIL">
+                <input type="email" value="" placeholder="Get a notification for offline events" name="EMAIL" class="required email text-large" id="mce-EMAIL">
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3d44ed8a86b03d067e0700c03_cb1eca5359" tabindex="-1" value=""></div>
                 <div class="clear"><input type="submit" value="→" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                 {{/*  <label class="text-tiniest" for="mce-EMAIL">Email Address  <span class="asterisk">*</span></label>  */}}
