--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,6 @@
 	<div id="footer" class="text-tiny">
+		<a href="mailto:mail@jaschaviehstaedt.com">Contact</a>
+		|
 		<a href="{{ .Site.BaseURL }}impress">Impress</a>
 		|
 		<a href="{{ .Site.BaseURL }}privacy">Privacy</a>
