--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 	<div id="footer" class="text-tiny">
 		<a href="mailto:mail@jaschaviehstaedt.com">Contact</a>
 		|
-		<a href="{{ .Site.BaseURL }}impress">Impress</a>
+		<a href="/impress">Impress</a>
 		|
-		<a href="{{ .Site.BaseURL }}privacy">Privacy</a>
+		<a href="/privacy">Privacy</a>
 	</div>
