--- a/layouts/index.html
+++ b/layouts/index.html
@@ -127,7 +127,7 @@
 	<div id="overlay" class="overlay"></div>
 	<!-- <iframe id="trailer" title="vimeo-player" src="https://player.vimeo.com/video/559893868"
 		width="320" height="180" frameborder="0" allowfullscreen></iframe> -->
-	{{ if not (eq .Site.Params.mode "release" ) }}
+	{{ if and (not (eq .Site.Params.mode "release")) (not (eq .Site.Params.mode "default")) }}
 		<iframe id="trailer" title="vimeo-player" src="https://player.vimeo.com/video/559893868"
 			width="1280" height="720" frameborder="0" allowfullscreen></iframe>
 	{{ end }}
